2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R: added feature for from= being a vector of values
	(not necessarily regularly spaced)
	

2010-10-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R: fix bug in check for integer values

	* R/gmenu.R: fix to adding popupmenu. Stil an issue with menus
	under OS X.

	* R/aabClasses.R: changed EventWidget from Container subclass to
	Widget subclass

2010-10-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: added tag(obj, "default_fill") check to avoid
	having widget fill with "both" when fill argument not
	specified. (gedit, gbutton)

	* R/dnd.R: fixed dnd from gvarbrowser

2010-10-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphicsnotebook.R: implemented

2010-10-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ghtml.R: added ghtml to pass off to gtext.

	* R/gimage.R: fixed typo in file.sep

2010-09-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphics.R: use qtutils device to make this widget

2010-09-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R: added drag and drop to widget.

	* R/aabQtEvents.R (runHandler): added code to put in dnd into
	widgets. Needs to use special gwClasses.

2010-09-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R: put in size() method

	* R/gnotebook.R: fixed bug in [ method

2010-09-17  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gpanedgroup.R: hack to get around no moveSplitter method

2010-09-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gexpandgroup.R: replaced with customized class. Still can't
	get resizing to work as desired.

2010-09-12  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R: redid this widget, runs slow so made option to
	refresh on click, as opposed to timer.
