@@ -1,3 +1,8 @@
+2010-11-11  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/aaaGenerics.R: fix to ".add" to show child so that delete/add
+	will work together
+
 2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gslider.R: added feature for from= being a vector of values
